# HSE_ML_and_DIS_cpp_homework

./: CMakeLists.txt  README.md
yandex_contest_hw_1/: task_A.cpp  task_B.cpp  task_B_v2.cpp  task_C.cpp  task_D.cpp  task_E.cpp  task_F.cpp  task_G.cpp  task_H.cpp  task_I.cpp  task_J.cpp
yandex_contest_hw_2/: task_2A.cpp  task_2B.cpp  task_2C.cpp  task_2D.cpp  task_2E.cpp  task_2F.cpp  task_2G.cpp  task_2H.cpp  task_2I.cpp  task_2J.cpp
yandex_contest_hw_3/: task_3A.cpp  task_3C.cpp
yandex_contest_hw_33/: task_33A.cpp  task_33B.cpp  task_33C.cpp  task_33D.cpp  task_33E.cpp  task_33F.cpp  task_33H.cpp  task_33I.cpp  task_33K.cpp  task_33N.cpp  task_33O.cpp
yandex_contest_hw_4/: task_4A.cpp  task_4B.cpp  task_4C.cpp  task_4D.cpp  task_4E.cpp  task_4F.cpp  task_4G.cpp  task_4H.cpp  task_4I.cpp  task_4J.cpp
