cmake_minimum_required(VERSION 3.0)
project(untitled)

set(CMAKE_CXX_STANDARD 14)

add_executable(untitled yandex_contest_hw_1/task_A.cpp yandex_contest_hw_1/task_B.cpp yandex_contest_hw_1/task_C.cpp yandex_contest_hw_1/task_E.cpp yandex_contest_hw_1/task_F.cpp yandex_contest_hw_1/task_B_v2.cpp yandex_contest_hw_1/task_D.cpp yandex_contest_hw_1/task_H.cpp yandex_contest_hw_1/task_I.cpp yandex_contest_hw_1/task_J.cpp yandex_contest_hw_1/task_G.cpp yandex_contest_hw_2/task_2A.cpp yandex_contest_hw_2/task_2B.cpp yandex_contest_hw_2/task_2C.cpp yandex_contest_hw_2/task_2D.cpp yandex_contest_hw_2/task_2E.cpp yandex_contest_hw_2/task_2G.cpp yandex_contest_hw_2/task_2F.cpp yandex_contest_hw_2/task_2H.cpp yandex_contest_hw_2/task_2I.cpp yandex_contest_hw_2/task_2J.cpp)